--- a/react-serverless-blog/public/index.html
+++ b/react-serverless-blog/public/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">  
+    <link rel="stylesheet" href="css/lightgallery.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -38,9 +39,11 @@
     <title>Giulia &amp; Bolli Fancy Blog</title>
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <script src="js/lightgallery.min.js"></script>
+    <script>lightGallery(document.getElementById('lightgallery'));</script>
+    <!-- lightgallery plugins -->
+    <script src="js/lg-thumbnail.min.js"></script>
+    <script src="js/lg-fullscreen.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
